[Qt][Draw][WIP] Applying OpenGL ES2 to GLDrawClass: Now, Yellow square is drawn, not usefle texture.

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -31,9 +31,13 @@ if(USE_SOCKET)
 endif()
 
 if(USE_QT_5)
-  QT5_ADD_RESOURCES(s_qt_common_RCC ${RESOURCE} ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/commontexts.qrc)
+  QT5_ADD_RESOURCES(s_qt_common_RCC ${RESOURCE}
+                    ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/commontexts.qrc
+                    ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/shaders.qrc)
 else()
-  QT4_ADD_RESOURCES(s_qt_common_RCC ${RESOURCE} ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/commontexts.qrc)
+  QT4_ADD_RESOURCES(s_qt_common_RCC ${RESOURCE} 
+                    ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/commontexts.qrc
+                    ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/shaders.qrc)
 endif()
 
 add_executable(${EXEC_TARGET}
