[UI][Qt][VM][JoyStick] Split to separate file  around Joystick.

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -5,6 +5,7 @@ set(s_qt_common_headers
 	  qt_gldraw.h
 	  qt_main.h
 	  emu_thread.h
+	  joy_thread.h
 )
 
 if(USE_QT_5)
@@ -22,6 +23,7 @@ set(QT_COMMON_BASE  emuevents_control.cpp
 	  qt_main.cpp
 	  qt_screen.cpp
 	  emu_thread.cpp
+	  joy_thread.cpp
 	  agar_logger.cpp
 	  sdl_sound.cpp
 	  emu_input.cpp
