[Draw][Qt] Split around drawing from qt_main.[h|cpp] to draw_thread.[h|cpp].

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -6,6 +6,7 @@ set(s_qt_common_headers
 	  qt_main.h
 	  emu_thread.h
 	  joy_thread.h
+	  draw_thread.h
 )
 
 if(USE_QT_5)
@@ -24,6 +25,7 @@ set(QT_COMMON_BASE  emuevents_control.cpp
 	  qt_screen.cpp
 	  emu_thread.cpp
 	  joy_thread.cpp
+	  draw_thread.cpp
 	  agar_logger.cpp
 	  sdl_sound.cpp
 	  emu_input.cpp
