--- a/source/build-cmake/fm77/CMakeLists.txt
+++ b/source/build-cmake/fm77/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_policy(SET CMP0011 NEW)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
-project (emufm7)
+project (emufm77)
 
 
 set(BUILD_FM77 ON CACHE BOOL "Build for FM77")
@@ -19,10 +19,6 @@ include(config_commonsource)
 
 add_subdirectory(../../src/vm/fm7 vm/fm7)
 add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/fm7 qt/fm7)
+add_subdirectory(../../src/qt/machines/fm7 qt/fm7)
                            
 add_subdirectory(../../src/qt/common qt/common)
-
-if(USE_SSE2)
-#  add_subdirectory(../../src/vm/fm7/vram/sse2 vm/fm7/vram/sse2)
-endif()
