--- a/source/build-cmake/fm77av40ex/CMakeLists.txt
+++ b/source/build-cmake/fm77av40ex/CMakeLists.txt
@@ -19,7 +19,7 @@ include(config_commonsource)
 
 add_subdirectory(../../src/vm/fm7 vm/fm7)
 add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/fm7 qt/fm7)
+add_subdirectory(../../src/qt/machines/fm7 qt/fm7)
                            
 add_subdirectory(../../src/qt/common qt/common)
 
