--- a/source/build-cmake/fm77av40ex/CMakeLists.txt
+++ b/source/build-cmake/fm77av40ex/CMakeLists.txt
@@ -8,21 +8,15 @@ cmake_policy(SET CMP0011 NEW)
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
-project (emufm77avex)
-
+project (emufm77av40ex)
 
 set(BUILD_FM77AV40EX ON CACHE BOOL "Build for FM77AV40EX")
 
 include(config_emufm7)
-
 include(config_commonsource)
 
 add_subdirectory(../../src/vm/fm7 vm/fm7)
 add_subdirectory(../../src/vm/fmgen vm/fmgen)
 add_subdirectory(../../src/qt/machines/fm7 qt/fm7)
-                           
-add_subdirectory(../../src/qt/common qt/common)
 
-if(USE_SSE2)
-#  add_subdirectory(../../src/vm/fm7/vram/sse2 vm/fm7/vram/sse2)
-endif()
+add_subdirectory(../../src/qt/common qt/common)
