--- a/source/build-cmake/jr100/CMakeLists.txt
+++ b/source/build-cmake/jr100/CMakeLists.txt
@@ -17,11 +17,12 @@ project (emujr100)
 
 set(EXEC_TARGET emujr100)
 
-set(LOCAL_LIBS 	   vm_jr100
-		   vm_vm
-		   common_common
+set(LOCAL_LIBS 	   qt_osd
 		   qt_jr100
 		   qt_gui
+		   vm_jr100
+		   vm_vm
+		   common_common
                    )
 
 set(VMFILES_BASE
@@ -49,20 +50,14 @@ set(VMFILES ${VMFILES_BASE})
 add_definitions(-D_JR100)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/jr100.qrc)
 
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/jr100)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/jr100)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/jr100)
 
 include(config_commonsource)
 
-
-
-if(USE_SSE2)
-# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/common/scaler/sse2)
-endif()
-
 add_subdirectory(../../src/vm/jr100 vm/jr100)
-add_subdirectory(../../src/qt/jr100 qt/jr100)
+add_subdirectory(../../src/qt/machines/jr100 qt/jr100)
      
 add_subdirectory(../../src/qt/common qt/common)
