--- a/source/build-cmake/fmr250/CMakeLists.txt
+++ b/source/build-cmake/fmr250/CMakeLists.txt
@@ -21,7 +21,7 @@ include(config_emufmr50)
 
 add_subdirectory(../../src/vm/fmr50 vm/fmr50)
 #add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/fmr50 qt/fmr50)
+add_subdirectory(../../src/qt/machines/fmr50 qt/fmr50)
 
 
                            
