--- a/source/build-cmake/jx/CMakeLists.txt
+++ b/source/build-cmake/jx/CMakeLists.txt
@@ -17,11 +17,12 @@ project (emujx)
 
 set(EXEC_TARGET emujx)
 
-set(LOCAL_LIBS 	   vm_jx
-		   vm_vm
-		   common_common
+set(LOCAL_LIBS 	   qt_osd
 		   qt_jx
 		   qt_gui
+		   vm_jx
+		   vm_vm
+		   common_common
                    )
 
 set(VMFILES_BASE
@@ -45,13 +46,7 @@ set(VMFILES_BASE
   event.cpp
 )
 
-
-set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
-set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
-set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger.")
-
 include(detect_target_cpu)
-#include(windows-mingw-cross)
 # set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
@@ -62,17 +57,12 @@ set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/jx.qrc)
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/jx)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/jx)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/jx)
 
 include(config_commonsource)
 
-
-
-if(USE_SSE2)
-# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/common/scaler/sse2)
-endif()
-
 add_subdirectory(../../src/vm/jx vm/jx)
-add_subdirectory(../../src/qt/jx qt/jx)
+add_subdirectory(../../src/qt/machines/jx qt/jx)
      
 add_subdirectory(../../src/qt/common qt/common)
