--- a/source/build-cmake/map1010/CMakeLists.txt
+++ b/source/build-cmake/map1010/CMakeLists.txt
@@ -14,13 +14,14 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (map1010)
 
-set(LOCAL_LIBS 	   vm_phc25
-		   vm_vm
-		   vm_fmgen
-		   common_common
+set(LOCAL_LIBS     qt_osd
 		   qt_debugger
 		   qt_phc25
 		   qt_gui
+		   vm_phc25
+		   vm_vm
+		   vm_fmgen
+		   common_common		   
                    )
 
 set(VMFILES
@@ -40,7 +41,6 @@ set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
 
 include(detect_target_cpu)
-#include(windows-mingw-cross)
 # set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
@@ -58,12 +58,13 @@ elseif(BUILD_MAP1010)
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/phc25)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/phc25)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/phc25)
 
 include(config_commonsource)
 
 add_subdirectory(../../src/vm/phc25 vm/phc25)
 add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/phc25 qt/phc25)
+add_subdirectory(../../src/qt/machines/phc25 qt/phc25)
 add_subdirectory(../../src/qt/common qt/common)
 add_subdirectory(../../src/qt/debugger qt/debugger)
