--- a/source/build-cmake/mz6500/CMakeLists.txt
+++ b/source/build-cmake/mz6500/CMakeLists.txt
@@ -12,15 +12,16 @@ message("")
 
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
-project (mz5500)
+project (mz6500)
 
-set(LOCAL_LIBS 	   vm_mz5500
+set(LOCAL_LIBS 	   qt_mz5500
+		   qt_debugger
+		   qt_gui
+		   qt_osd
+		   vm_mz5500
 		   vm_vm
 		   vm_fmgen
 		   common_common
-		   qt_mz5500
-		   qt_debugger
-		   qt_gui
                    )
 
 set(VMFILES
@@ -72,7 +73,8 @@ else()
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/mz5500)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/mz5500)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/mz5500)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/debugger)
 
 include(config_commonsource)
@@ -80,7 +82,7 @@ include(config_commonsource)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
 
 add_subdirectory(../../src/vm/mz5500 vm/mz5500)
-add_subdirectory(../../src/qt/mz5500 qt/mz5500)
+add_subdirectory(../../src/qt/machines/mz5500 qt/mz5500)
 add_subdirectory(../../src/qt/debugger qt/debugger)
 add_subdirectory(../../src/vm/fmgen vm/fmgen)
 add_subdirectory(../../src/qt/common qt/common)
