--- a/source/build-cmake/pc98lt/CMakeLists.txt
+++ b/source/build-cmake/pc98lt/CMakeLists.txt
@@ -13,16 +13,16 @@ message("")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 
-project (emupc9801vm)
+project (emupc98lt)
 
 
-set(LOCAL_LIBS 	   vm_pc98ha
-		   vm_vm
-		   common_common
-#		   vm_fmgen
-#		   common_scaler-generic
+set(LOCAL_LIBS     qt_osd
                    qt_pc98ha
 		   qt_gui
+		   vm_pc98ha
+		   vm_vm
+		   common_common
+#		   vm_fmgen		   
                   )
 
 set(VMFILES
@@ -81,22 +81,14 @@ endif()
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/pc98ha)
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fmgen)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/pc98ha)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/pc98ha)
 
 include(config_commonsource)
 
-if(USE_SSE2)
-#  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fm7/vram/sse2)
-#  add_subdirectory(../../src/vm/fm7/vram/sse2 vm/fm7/vram/sse2)
-endif()
-
-
-if(USE_SSE2)
-# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/agar/common/scaler/sse2)
-endif()
 
 add_subdirectory(../../src/vm/pc98ha vm/pc98ha)
 #add_subdirectory(../../src/vm/fmgen vm/fmgen)
-add_subdirectory(../../src/qt/pc98ha qt/pc98ha)
+add_subdirectory(../../src/qt/machines/pc98ha qt/pc98ha)
                            
 add_subdirectory(../../src/qt/common qt/common)
