--- a/source/build-cmake/smc777/CMakeLists.txt
+++ b/source/build-cmake/smc777/CMakeLists.txt
@@ -17,12 +17,13 @@ project (emusmc777)
 
 set(EXEC_TARGET emusmc777)
 
-set(LOCAL_LIBS 	   vm_smc777
-		   vm_vm
-		   common_common
+set(LOCAL_LIBS 	   qt_osd
 		   qt_smc777
 		   qt_debugger
 		   qt_gui
+		   vm_smc777
+		   vm_vm
+		   common_common		   
                    )
 
 set(VMFILES_BASE
@@ -54,12 +55,13 @@ set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/smc777.qrc)
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/smc777)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/smc777)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/smc777)
 
 include(config_commonsource)
 
 add_subdirectory(../../src/vm/smc777 vm/smc777)
-add_subdirectory(../../src/qt/smc777 qt/smc777)
+add_subdirectory(../../src/qt/machines/smc777 qt/smc777)
      
 add_subdirectory(../../src/qt/common qt/common)
 add_subdirectory(../../src/qt/debugger qt/debugger)
