--- a/source/build-cmake/pv1000/CMakeLists.txt
+++ b/source/build-cmake/pv1000/CMakeLists.txt
@@ -14,12 +14,13 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (pv1000)
 
-set(LOCAL_LIBS 	   vm_pv1000
-		   vm_vm
-		   common_common
+set(LOCAL_LIBS     qt_osd
 		   qt_debugger
 		   qt_pv1000
 		   qt_gui
+		   vm_pv1000
+		   vm_vm
+		   common_common
                    )
 
 set(VMFILES
@@ -43,11 +44,12 @@ set(EXEC_TARGET emupv1000)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/pv1000.qrc)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/pv1000)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/pv1000)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/pv1000)
 
 include(config_commonsource)
 
 add_subdirectory(../../src/vm/pv1000 vm/pv1000)
-add_subdirectory(../../src/qt/pv1000 qt/pv1000)
-add_subdirectory(../../src/qt/common qt/common)
+add_subdirectory(../../src/qt/machines/pv1000 qt/pv1000)
 add_subdirectory(../../src/qt/debugger qt/debugger)
+add_subdirectory(../../src/qt/common qt/common)
