--- a/source/build-cmake/qc10/CMakeLists.txt
+++ b/source/build-cmake/qc10/CMakeLists.txt
@@ -16,11 +16,12 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 project (emuqc10)
 
 
-set(LOCAL_LIBS 	   vm_qc10
-		   vm_vm
-		   common_common
+set(LOCAL_LIBS 	   qt_osd
                    qt_qc10
 		   qt_gui
+		   vm_qc10
+		   vm_vm
+		   common_common		   
                   )
 
 set(VMFILES
@@ -74,23 +75,12 @@ endif()
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/qc10)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/qc10)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/qc10)
 
 include(config_commonsource)
 
-if(USE_SSE2)
-#  include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/fm7/vram/sse2)
-#  add_subdirectory(../../src/vm/fm7/vram/sse2 vm/fm7/vram/sse2)
-endif()
-
-
-if(USE_SSE2)
-# include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/agar/common/scaler/sse2)
-endif()
-
 add_subdirectory(../../src/vm/qc10 vm/qc10)
-add_subdirectory(../../src/qt/qc10 qt/qc10)
-
-
+add_subdirectory(../../src/qt/machines/qc10 qt/qc10)
                            
 add_subdirectory(../../src/qt/common qt/common)
