--- a/source/build-cmake/rx78/CMakeLists.txt
+++ b/source/build-cmake/rx78/CMakeLists.txt
@@ -14,12 +14,13 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (rx78)
 
-set(LOCAL_LIBS 	   vm_rx78
-		   vm_vm
-		   common_common
+set(LOCAL_LIBS 	   qt_osd
 		   qt_debugger
 		   qt_rx78
 		   qt_gui
+		   vm_rx78
+		   vm_vm
+		   common_common		   
                    )
 
 set(VMFILES
@@ -44,11 +45,12 @@ set(EXEC_TARGET emurx78)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/rx78.qrc)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/rx78)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/rx78)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/rx78)
 
 include(config_commonsource)
 
 add_subdirectory(../../src/vm/rx78 vm/rx78)
-add_subdirectory(../../src/qt/rx78 qt/rx78)
-add_subdirectory(../../src/qt/common qt/common)
+add_subdirectory(../../src/qt/machines/rx78 qt/rx78)
 add_subdirectory(../../src/qt/debugger qt/debugger)
+add_subdirectory(../../src/qt/common qt/common)
