--- a/source/build-cmake/z80tvgame_z80pio/CMakeLists.txt
+++ b/source/build-cmake/z80tvgame_z80pio/CMakeLists.txt
@@ -17,12 +17,13 @@ project (emuz80tvgame_z80pio)
 
 set(EXEC_TARGET emuz80tvgame_z80pio)
 
-set(LOCAL_LIBS 	   vm_z80tvgame
-		   vm_vm
-		   common_common
+set(LOCAL_LIBS 	   qt_osd
 		   qt_z80tvgame
 		   qt_gui
 		   qt_debugger
+		   vm_z80tvgame
+		   vm_vm
+		   common_common		   
                    )
 
 set(VMFILES_BASE
@@ -49,24 +50,23 @@ else()
   add_definitions(-D_USE_Z80PIO)
   set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/z80tvgame_z80pio.qrc)
 endif()
-  
 
 include(detect_target_cpu)
-#include(windows-mingw-cross)
 # set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/z80tvgame)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/z80tvgame)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/z80tvgame)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/debugger)
 
 include(config_commonsource)
 
 
 add_subdirectory(../../src/vm/z80tvgame vm/z80tvgame)
-add_subdirectory(../../src/qt/z80tvgame qt/z80tvgame)
+add_subdirectory(../../src/qt/machines/z80tvgame qt/z80tvgame)
 add_subdirectory(../../src/qt/debugger qt/debugger)
      
 add_subdirectory(../../src/qt/common qt/common)
